fix layout for card user preview on mobile

--- a/src/app/components/user-preview/user-preview.scss
+++ b/src/app/components/user-preview/user-preview.scss
@@ -35,7 +35,7 @@ stk-user-preview {
       font-style: italic;
     }
 
-    .user-location {
+    .user-stats {
       padding-top: 20px;
     }
   }
